# CMCore

./: .gitignore  ANALYSIS.md  BUILD_FAILURE_SOLUTION.md  CMakeLists.txt  COLOR_UB_README.md  CONTAINER_COMPARISON.md  CONTAINER_QUICK_GUIDE.md  FILE_MPH_TEST_README.md  FILE_ORGANIZATION_PROPOSAL.md  FLATORDEREDSET_OPTIMIZATION.md  FLATORDEREDSET_OPTIMIZATION_EN.md  FLATUNORDEREDSET_OPTIMIZATION.md  FLATUNORDEREDSET_OPTIMIZATION_CN.md  HASH_CONTAINERS_README.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  ORDERED_MAP_IMPLEMENTATION.md  PERFECT_HASH_CLARIFICATION.md  PERFECT_HASH_IMPLEMENTATION.md  PERFECT_HASH_OVERVIEW.md  REFACTORING_SUMMARY.md  RETRY_MECHANISM_QUICK_GUIDE.md  STATIC_MPH_ANALYSIS.md  STATIC_MPH_PROTOTYPE_SUMMARY.md  STATIC_MPH_QUICKREF.md  STATIC_PERFECT_HASH_DESIGN.md  STATIC_PERFECT_HASH_SET_SUMMARY.md  TASK_COMPLETE_REPORT_SET.md  color_test_example.cpp  path_config.cmake  readme.txt  usage_example.cpp
examples/: CMakeLists.txt
examples/datatype/: ActiveDataManagerTest.cpp  ActiveDataManagerTest2Staged.cpp  ActiveIDManagerEnhancedTest.cpp  ActiveIDManagerGetIdleViewTest.cpp  ActiveIDManagerTest.cpp  ActiveMemoryBlockManagerTest.cpp  AlphaBlendTest.cpp  CMakeLists.txt  ConstStringSetDebug.cpp  ConstStringSetTest.cpp  HalfFloatTest.cpp  HashIDMapEnhancedTest.cpp  HashIDMapTest.cpp  HashMapTest.cpp  IDNameStressTest.cpp  IDNameTest.cpp  IDObjectManagerTest.cpp  MemcmpTest.cpp  Size2Test.cpp  SplitStringTest.cpp  Uint2HexStrTest.cpp  UnorderedMapTest.cpp  UserInfo.h  ValueBufferShallowCopyDemo.cpp  color_test_example.cpp  strchr_test.cpp  utos_test.cpp
examples/datatype/ConstStringSet/: CMakeLists.txt  ConstStringSetLargeScaleTest.cpp  ConstStringSetTest.cpp
examples/datatype/collection/: ArrayListTest.cpp  BidirectionalMapVerification.cpp  BlockAllocatorTest.cpp  BlockAllocatorTest2.cpp  CMakeLists.txt  CollectionTest.cpp  CollectionTestComprehensive.cpp  ComprehensiveMoveSemanticsTest.cpp  DataArrayTest.cpp  DataArrayTestEnhanced.cpp  DataChainTest.cpp  DataChainTest2.cpp  FIX_SUMMARY.md  FixVerificationTest.cpp  FixedValuePoolTest.cpp  FlatTreeTest.cpp  GetLastTest.cpp  IndexedListTest.cpp  ListAndObjectListTest.cpp  ListTest.cpp  ManagedPoolTest.cpp  MapBenchmark.cpp  MapTest.cpp  MinimalTest.cpp  MonotonicIDListTest.cpp  Move734Test.cpp  MoveTest.cpp  MultiMapTest.cpp  ObjectManagerTest.cpp  OrderedMapTest.cpp  PointerObjectPoolTest.cpp  PoolTest.cpp  QueueTest.cpp  QuickTest.cpp  README_TESTS.md  SeriesPoolTest.cpp  SimpleSeriesPoolTest.cpp  SimpleSortedSetTest.cpp  StackTest.cpp  StringListTest.cpp  (+6 more)
examples/datatype/ram/: CMakeLists.txt  RAM_TestClass.cpp  RAM_TestClass.h  RuntimeAssetManager.h  RuntimeAssetManagerTest.cpp
examples/datatype/static_mph/: CMakeLists.txt  LargeScaleMapTest.cpp  LargeScaleSetTest.cpp  PerformanceBenchmark.cpp  ProgressiveMPHTest.cpp  RetryMechanismTest.cpp  StaticPerfectHashMapPrototype.cpp  StaticPerfectHashMapScaleTest.cpp  StaticPerfectHashSetBasicTest.cpp  StressTest.cpp  StringSetFileTest.cpp  StringSetMPHTest.cpp
examples/filesystem/: CMakeLists.txt  EnumFileTest.cpp  EnumVolumeTest.cpp  FixFilenameTest.cpp
examples/log/: CMakeLists.txt  LogOutputWaysExtra.cpp  LogOutputWaysMain.cpp  LogOutputWaysModule.cpp  LogOutputWaysShared.h
examples/misc/: CMakeLists.txt  DAGTest.cpp
examples/system/: ArchTest.cpp  CMakeLists.txt  GetCpuInfo.cpp  LoggerTest.cpp
examples/time/: CMakeLists.txt  DateTimeFormatTest.cpp  chinese_calendar_example.cpp  datetime_format_extended_test.cpp  execution_sentence_example.cpp  fake_calendar_example.cpp  time_count.cpp  timestamp_class_test.cpp  timestamp_test.cpp
src/: CMakeLists.txt  SystemInfo.cpp  URI.cpp
src/Color/: BlendColor.cpp  Color.cpp  Color3f.cpp  Color3ub.cpp  Color4f.cpp  Color4ub.cpp  HSL.cpp
src/DataType/: Color.cpp  Color3f.cpp  StringList.cpp
src/FileSystem/: CollectFiles.cpp  EnumFile.cpp  FileSystem.cpp  Path.cpp
src/IO/: DataInputStream.cpp  DataOutputStream.cpp  FifoStream.cpp  FileAccess.cpp  FileInputStream.cpp  IOType.cpp  InputStream.cpp  MiniPackInfoBlock.cpp  MiniPackInfoBlock.h  MiniPackMemory.cpp  MiniPackReader.cpp  PipeStream.cpp  RandomAccessFile.cpp  TextInputStream.cpp  TextOutputStream.cpp
src/IO/Event/: EventDispatcher.cpp  GestureEvent.cpp  InputConfig.cpp  InputMapper.cpp  MouseEvent.cpp  PointerEvent.cpp  TouchEvent.cpp
src/Log/: LogFile.cpp  Loginfo.cpp  ObjectLogger.cpp
src/Math/: HalfFloat.cpp  LAtan.cpp  LSinCos.cpp  Matrix4f.cpp  Transform.cpp
src/Object/: Object.cpp  ObjectBaseInfo.cpp  ObjectManager.cpp  ObjectTracker.cpp  TickObject.cpp
src/Other/: CodePage.cpp  ExpandString.cpp  ExpendString.cpp  MemoryAllocator.cpp  MemoryBlock.cpp  ThreadFunc.cpp  UnicodeBlocks.cpp
src/Platform/: CMakeLists.txt  Window.cpp
src/Platform/Android/: CpuAffinityARM.cpp  LogConsole.cpp  ProgramPath.cpp
src/Platform/Apple/: CpuAffinityARM.cpp  CpuInfo_ARM.cpp  CpuInfo_X86.cpp  ProgramPath.mm
src/Platform/SOC/: ARMCpuInfo.cpp  SOC.cpp
src/Platform/UNIX/: CpuAffinity.cpp  CpuInfo_ARM.cpp  CpuInfo_X86.cpp  LogConsole.cpp  MemoryAffinity.cpp
src/Platform/Win/: CodePage.cpp  CpuAffinity.cpp  CpuInfo_ARM.cpp  CpuInfo_X86.cpp  DisplayMode.cpp  EnumVolume.cpp  EnumWinFonts.cpp  LogConsole.cpp  LogDialog.cpp  MemoryAffinity.cpp  Semaphore.cpp  WinMessage.cpp  WinWindow.cpp
src/PlugIn/: ExternalModule.cpp  ExternalPlugIn.cpp  PlugInManage.cpp  PlugInManager.cpp
src/Text/: CodePage.cpp  ConstStringSetSaveToTextStream.cpp  Endian.cpp  LoadString.cpp  LoadStringList.cpp  LoadStringViewList.cpp  StringList.cpp  UTF.cpp  UnicodeBlocks.cpp
src/Time/: CalendarDate.cpp  ChineseCalendar.cpp  Date.cpp  DateTime.cpp  Time.cpp  TimeCount.cpp  TimeID.cpp  TimeOfDay.cpp  TimeVal.cpp  Timestamp.cpp  TimestampClass.cpp
src/Type/: ActiveIDManager.cpp  ActiveMemoryBlockManager.cpp  BitsArray.cpp  BlockAllocator.cpp  Collection.cpp  DataChain.cpp  IDName.cpp  Node.cpp  NodeManager.cpp  TreeBaseNode.cpp  TreeNode.cpp  TreeNodeManager.cpp
src/Type/node/: Node.cpp  NodeManager.cpp  TreeBaseNode.cpp
src/hgl/utils/: ObjectTracker.cpp
(+624 files in other folders)
